Lenguajes de programacion y ofimatica

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <span>🇬🇧</span>
                 <h3>Inglés</h3>
                 <p>B2 - First Certificate</p>
-            </div>
+            </div>            
             <div class="language">                
                 <h3>Valenciano</h3>
                 <p>B1</p>
@@ -102,7 +102,7 @@
             <div class="skill">
                 <span>💾</span>
                 <h3>Bases de Datos</h3>
-                <p>MySQL</p>
+                <p>MySQL, MariaDB, Prisma</p>
             </div>            
             <div class="skill">
                 <span>💻</span>
@@ -113,7 +113,17 @@
                 <span>🖥️</span>
                 <h3>Sistemas Operativos</h3>
                 <p>Windows, Linux</p>
-            </div>            
+            </div> 
+            <div class="skill">
+                <span>🖥️</span>
+                <h3>Ofimatica</h3>
+                <p>Word, PowerPoint, Excel</p>
+            </div> 
+            <div class="skill">
+                <span>💻</span>
+                <h3>Lenguajes</h3>
+                <p>Java, HTML, CSS</p>
+            </div>           
         </div>
     </section>
 
