--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Parte del equipo de rugby de Alcoy (2021-2023)</p>
             </div>
             <div class="aficion">
-                <span>&#x1f3ae</span>
+                <span>🎮</span>
                 <h3>Videojuegos</h3>
                 <p>Fan de los videojuegos y la informatica en general</p>
             </div>
@@ -81,7 +81,12 @@
                 <span>🇬🇧</span>
                 <h3>Inglés</h3>
                 <p>B2 - First Certificate</p>
-            </div>            
+            </div>
+            <div class="language">
+                <span>🇮🇹</span>
+                <h3>Italiano</h3>
+                <p>Basico</p>
+            </div>
             <div class="language">                
                 <h3>Valenciano</h3>
                 <p>B1</p>
