--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <p class="titulo">Currículum Vitae (C.V.)</p>
         <cite>La presion hace al diamante</cite>       
     </header>
+    <section class="navegador">
+        <a href="#experiencia">Experiencia</a> <a href="#formacion-reglada"> Formacion</a> <a href="#aficiones">Aficiones</a> <a href="#idiomas">Idiomas</a> <a href="#informatica">Informatica</a>
+    </section>
     <section id="experiencia">
         <h2>Experiencia</h2>
         <div class="experience-container">            
@@ -48,7 +51,7 @@
     </section>
 
     <section id="aficiones">
-        <h2>Formación Complementaria</h2>
+        <h2>Aficiones</h2>
         <div class="aficiones">
             <div class="aficion">
                 <span>&#x1f3c8</span>
